--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <style>
+img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
+
+<img src="barack-obama-12782369-1-402.jpg" alt="Obama">
+    </style>
+    <link rel="stylesheet" href="style.css">
+    <h1>Hello!</h1>
+    <img src="https://www.biography.com/.image/t_share/MTE4MDAzNDEwNzg5ODI4MTEw/barack-obama-12782369-1-402.jpg">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Justins Fancy Site</title>
+</head>
+<body>
+<p>Hey hows it going?</p>
+</body>
+</html>
